[gd_scene load_steps=6 format=3 uid="uid://bhekugxywqmxq"]

[ext_resource type="Texture2D" uid="uid://p6e4swncyb8q" path="res://Assets/market.png" id="1_gc3ut"]
[ext_resource type="Script" path="res://Scene/Ui/seller.gd" id="1_ps2ox"]
[ext_resource type="LabelSettings" uid="uid://cfdg0di8ool2i" path="res://Scene/Ui/policeLabel.tres" id="2_sumfq"]
[ext_resource type="Texture2D" uid="uid://bme3yrpqwj0jx" path="res://Assets/icon/MonedaD.png" id="4_jqigl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7b3ia"]
atlas = ExtResource("4_jqigl")
region = Rect2(1, 0, 14, 16)

[node name="Seller" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ps2ox")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 2.0
offset_right = 259.0
offset_bottom = 89.0
texture = ExtResource("1_gc3ut")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 394.0
offset_bottom = 190.0
scale = Vector2(0.31, 0.31)
text = "Drag here
 to sell"
label_settings = ExtResource("2_sumfq")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 167.0
offset_top = 27.0
offset_right = 207.0
offset_bottom = 67.0
scale = Vector2(1.2, 1.2)
texture = SubResource("AtlasTexture_7b3ia")

[node name="price" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 39.0
offset_right = 259.0
offset_bottom = 119.0
scale = Vector2(0.4, 0.4)
text = "10"
label_settings = ExtResource("2_sumfq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
